// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Patterns/Header Big 1`] = `
<section>
  <header>
    
      
    <nav
      class="navbar "
    >
      
        
      <div
        class="navbar-brand"
      >
        
          
        <a
          class="has-text-black"
        >
          
            
          <svg
            class="logo"
            preserveAspectRatio="xMidyMid meet"
            viewBox="0 0 304 73"
            xmlns="http://www.w3.org/2000/svg"
          >
            
              
            <use
              href="logos/cc/logomark.svg#creativecommons"
            />
            
            
          </svg>
          
          
        </a>
        
          
        <a
          aria-expanded="false"
          aria-label="menu"
          class="navbar-burger is-active"
          role="button"
        >
          
            
          <span
            aria-hidden="true"
          />
          
            
          <span
            aria-hidden="true"
          />
          
            
          <span
            aria-hidden="true"
          />
          
          
        </a>
        
        
      </div>
      
        
      <div
        class="navbar-menu is-active"
      >
        
          
        <div
          class="navbar-end"
        >
          
            
          <div
            class="navbar-item has-dropdown is-hoverable"
          >
            
              
            <a
              class="navbar-link is-arrowless"
            >
              Dropdown
              <i
                class="icon caret-down"
              />
            </a>
            
              
            <div
              class="navbar-dropdown"
            >
              
                
              <a
                class="navbar-item"
              >
                Item 1
              </a>
              
                
              <a
                class="navbar-item"
              >
                Item 2
              </a>
              
                
              <a
                class="navbar-item"
              >
                Item 3
              </a>
              
              
            </div>
            
            
          </div>
          
            
          <a
            class="navbar-item"
          >
            
              No dropdown
            
          </a>
          
          
        </div>
        
        
      </div>
      
      
    </nav>
    
    
  </header>
  
    
  <div
    style="background-color: rgb(237, 89, 47); height: 200px;"
  />
</section>
`;

exports[`Storyshots Patterns/Header Small 1`] = `
<section>
  <header>
    
      
    <nav
      class="navbar small"
    >
      
        
      <div
        class="navbar-brand"
      >
        
          
        <a
          class="has-text-black"
        >
          
            
          <svg
            class="logo"
            preserveAspectRatio="xMidyMid meet"
            viewBox="0 0 304 73"
            xmlns="http://www.w3.org/2000/svg"
          >
            
              
            <use
              href="logos/cc/logomark.svg#creativecommons"
            />
            
            
          </svg>
          
          
        </a>
        
          
        <a
          aria-expanded="false"
          aria-label="menu"
          class="navbar-burger is-active"
          role="button"
        >
          
            
          <span
            aria-hidden="true"
          />
          
            
          <span
            aria-hidden="true"
          />
          
            
          <span
            aria-hidden="true"
          />
          
          
        </a>
        
        
      </div>
      
        
      <div
        class="navbar-menu is-active"
      >
        
          
        <div
          class="navbar-end"
        >
          
            
          <div
            class="navbar-item has-dropdown is-hoverable"
          >
            
              
            <a
              class="navbar-link is-arrowless"
            >
              Dropdown
              <i
                class="icon caret-down"
              />
            </a>
            
              
            <div
              class="navbar-dropdown"
            >
              
                
              <a
                class="navbar-item"
              >
                Item 1
              </a>
              
                
              <a
                class="navbar-item"
              >
                Item 2
              </a>
              
                
              <a
                class="navbar-item"
              >
                Item 3
              </a>
              
              
            </div>
            
            
          </div>
          
            
          <a
            class="navbar-item"
          >
            
              No dropdown
            
          </a>
          
          
        </div>
        
        
      </div>
      
      
    </nav>
    
    
  </header>
  
    
  <div
    style="background-color: rgb(4, 166, 53); height: 200px;"
  />
</section>
`;
